# hello_teensy

./: CMakeLists.txt  Makefile  README.md  setup.sh
blink/: Makefile
cmake_config/: arduino.cmake  teensy3.cmake
